--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 header {
@@ -28,4 +29,8 @@ nav {
 nav a:nth-child(4) {
   padding-left: 0.7rem;
   border-left: 1px solid black;
+}
+
+.active {
+  text-decoration: underline;
 }
