--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,26 @@
   text-decoration: none;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 1.5rem 3%;
-}
-
-.logo {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
-}
-
+header,
+.logo,
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+header {
+  padding: 1.5rem 3%;
+  border-bottom: 1px solid dimgray;
+}
+
+.logo,
+nav {
   gap: 1rem;
+}
+
+a {
+  color: inherit;
 }
 
 nav a:nth-child(4) {
@@ -32,5 +35,56 @@ nav a:nth-child(4) {
 }
 
 .active {
+  color: blue;
   text-decoration: underline;
+}
+
+/* table */
+table {
+  margin: 3rem;
+  border-collapse: collapse;
+}
+
+table,
+tr,
+td,
+th {
+  border: 1px solid gray;
+  text-align: start;
+}
+
+th,
+tr td:nth-child(-n+2) {
+  vertical-align: text-top;
+  padding: 1rem 2rem 1rem 0.3rem;
+}
+
+tr td:nth-child(n+3) {
+  width: 12%;
+  padding: 1rem;
+}
+
+tr:nth-child(even) {
+  background-color: lightgrey;
+}
+
+td button {
+  background-color: transparent;
+  padding: 0.6rem 0.7rem;
+  border: 2px solid darkgray;
+  color: gray;
+}
+
+td button:hover {
+  background-color: darkgray;
+  color: white;
+  scale: 1.1;
+}
+
+span {
+  background-color: rgb(44, 106, 112);
+  border-radius: 5px;
+  padding: 4px;
+  width: 100%;
+  color: azure;
 }
