--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,10 @@ nav a:nth-child(4) {
 /* rockets page */
 .rocket-container {
   margin-top: 2rem;
-}
-
-.col {
-  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 1rem;
 }
 
 .rocket-img {
@@ -59,3 +59,4 @@ nav a:nth-child(4) {
 
 .btn {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
