Fetch the data and display it

--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,25 @@ span {
   width: 100%;
   color: azure;
 }
+
+/* rockets page */
+.rocket-container {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.rocket-img {
+  width: 300px;
+  height: 200px;
+}
+
+.info {
+  text-align: left;
+}
+
+.btn {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
